# Mjolnir

./: .clang-format  .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  PERFORMANCE.md  README.md  en.search-data.min.433bc7abc1e9abfa11f0a8ccdd383445239530493994834684dd75ffa28ee3e6.js  en.search-data.min.a0a652cd68d0d9893baef7af6e9915a88c18f45bff359a22c5db662c2fffb9c1.js  en.search.min.1d89302bbdadea597cd19fe42e7fd26b339538b1278bff549e4c500144106559.js  en.search.min.8e76420dae40536ef4e44ced0bf6c37ba3bed8445cf1ef9b4e240fc62b5dcd51.js  index.html  index.xml  ja.search-data.min.3a23b63c237e7cb3fce79dce407679550f3f3530e0db8bdc5db915afb48fb08f.js  ja.search-data.min.f4354825e3f2b116f086105cc9a7306269097ec1fc9075f3ad89478c8bc7fff5.js  ja.search.min.3e3069284ff6b656162a6bc7f49492fd21b7466717ea0ab309e354365ad449f8.js  ja.search.min.a483c99640d51f27c8a945e75933a4d9b32ec0c4223e303e7452778c34c44f8d.js  manifest.json  sitemap.xml
mjolnir/: CMakeLists.txt
mjolnir/core/: AxisAlignedPlane.hpp  BAOABLangevinIntegrator.cpp  BAOABLangevinIntegrator.hpp  BondAngleInteraction.hpp  BondLengthInteraction.hpp  BoundaryCondition.hpp  CMakeLists.txt  ClementiDihedralPotential.hpp  ConstraintForceField.cpp  ConstraintForceField.hpp  DCDLoader.cpp  DCDLoader.hpp  DCDObserver.cpp  DCDObserver.hpp  DefaultTraits.hpp  DihedralAngleInteraction.hpp  DynamicVariable.cpp  DynamicVariable.hpp  EnergyCalculationSimulator.hpp  EnergyObserver.cpp  EnergyObserver.hpp  ExcludedVolumePotential.hpp  ExclusionList.cpp  ExclusionList.hpp  ExternalDistanceInteraction.hpp  ExternalForceField.cpp  ExternalForceField.hpp  ExternalForceInteractionBase.cpp  ExternalForceInteractionBase.hpp  ForceField.cpp  ForceField.hpp  ForceFieldBase.hpp  GBAOABLangevinIntegrator.cpp  GBAOABLangevinIntegrator.hpp  GFWNPTLangevinIntegrator.cpp  GFWNPTLangevinIntegrator.hpp  GFWNpTLangevinIntegrator.cpp  GFWNpTLangevinIntegrator.hpp  GJFNVTLangevinIntegrator.cpp  GJFNVTLangevinIntegrator.hpp  (+105 more)
mjolnir/forcefield/: CMakeLists.txt
mjolnir/input/: CMakeLists.txt  get_toml_value.hpp  read_constraint.cpp  read_constraint.hpp  read_external_forcefield.cpp  read_external_forcefield.hpp  read_external_interaction.cpp  read_external_interaction.hpp  read_external_potential.cpp  read_external_potential.hpp  read_files_table.hpp  read_forcefield.cpp  read_forcefield.hpp  read_global_forcefield.cpp  read_global_forcefield.hpp  read_global_interaction.cpp  read_global_interaction.hpp  read_global_potential.cpp  read_global_potential.hpp  read_input_file.cpp  read_input_file.hpp  read_integrator.cpp  read_integrator.hpp  read_interaction.hpp  read_local_forcefield.cpp  read_local_forcefield.hpp  read_local_interaction.cpp  read_local_interaction.hpp  read_local_potential.cpp  read_local_potential.hpp  read_observer.cpp  read_observer.hpp  read_path.cpp  read_path.hpp  read_potential.hpp  read_random_number_generator.cpp  read_random_number_generator.hpp  read_simulator.cpp  read_simulator.hpp  read_spatial_partition.cpp  (+12 more)
mjolnir/interaction/: BondAngleInteraction.hpp  BondLengthInteraction.hpp  CMakeLists.txt  DihedralAngleInteraction.hpp  ExternalDistanceInteraction.hpp  GlobalPairExcludedVolumeInteraction.hpp  GlobalPairInteraction.hpp  GlobalPairLennardJonesInteraction.hpp  GlobalPairUniformLennardJonesInteraction.hpp
mjolnir/io/: make_global_potential.hpp  make_local_potential.hpp
mjolnir/math/: Matrix.hpp  Vector.hpp  approx.hpp  compiletime.hpp  constants.hpp  fast_inv_sqrt.hpp  functions.hpp  math.hpp  quaternion.hpp  rsqrt.hpp  vector_util.hpp
mjolnir/omp/: BAOABLangevinIntegrator.cpp  BAOABLangevinIntegrator.hpp  BondAngleInteraction.cpp  BondAngleInteraction.hpp  BondLengthGoContactInteraction.cpp  BondLengthGoContactInteraction.hpp  BondLengthInteraction.cpp  BondLengthInteraction.hpp  CMakeLists.txt  ContactInteraction.cpp  ContactInteraction.hpp  DihedralAngleInteraction.cpp  DihedralAngleInteraction.hpp  ExternalDistanceInteraction.hpp  ForceField.cpp  ForceField.hpp  GFWNPTLangevinIntegrator.cpp  GFWNPTLangevinIntegrator.hpp  GFWNpTLangevinIntegrator.cpp  GFWNpTLangevinIntegrator.hpp  GJFNVTLangevinIntegrator.cpp  GJFNVTLangevinIntegrator.hpp  GlobalPairDebyeHuckelInteraction.hpp  GlobalPairExcludedVolumeInteraction.cpp  GlobalPairExcludedVolumeInteraction.hpp  GlobalPairInteraction.cpp  GlobalPairInteraction.hpp  GlobalPairLennardJonesInteraction.cpp  GlobalPairLennardJonesInteraction.hpp  GlobalPairUniformLennardJonesInteraction.cpp  GlobalPairUniformLennardJonesInteraction.hpp  GlobalStoichiometricInteraction.cpp  GlobalStoichiometricInteraction.hpp  GoContactInteraction.cpp  GoContactInteraction.hpp  OpenMPSimulatorTraits.hpp  PWMcosInteraction.cpp  PWMcosInteraction.hpp  PeriodicGridCellList.cpp  PeriodicGridCellList.hpp  (+25 more)
mjolnir/potential/: CMakeLists.txt  ClementiDihedralPotential.hpp  CosinePotential.hpp  DebyeHuckelPotential.hpp  ExcludedVolumePotential.hpp  FlexibleLocalAnglePotential.hpp  FlexibleLocalDihedralPotential.hpp  GaussianPotential.hpp  Go1012ContactPotential.hpp  HarmonicPotential.hpp  ImplicitMembranePotential.hpp  LennardJonesPotential.hpp  QuarticPotential.hpp
mjolnir/util/: access_iterator.hpp  aligned_allocator.hpp  aligned_storage.hpp  binary_io.hpp  color.hpp  empty.hpp  fixed_vector.hpp  format_nth.hpp  get_toml_value.hpp  index_sequence.hpp  io.hpp  is_all.hpp  is_finite.hpp  logger.hpp  macro.hpp  make_unique.hpp  make_zip.hpp  meta.hpp  observer_ptr.hpp  progress_bar.hpp  range.hpp  scalar_type_of.hpp  static_string.hpp  string.hpp  throw_exception.hpp  type_traits.hpp  zip_iterator.hpp
src/: CMakeLists.txt  jarngreipr.cpp  main.cpp  mjolnir.cpp
test/core/: CMakeLists.txt  test_3spn2_base_base_interaction.cpp  test_3spn2_base_base_interaction_potential.cpp  test_3spn2_base_pair_interaction.cpp  test_3spn2_base_pair_potential.cpp  test_3spn2_base_stacking_interaction.cpp  test_3spn2_base_stacking_potential.cpp  test_3spn2_bond_potential.cpp  test_3spn2_cross_stacking_interaction.cpp  test_3spn2_excluded_volume_potential.cpp  test_afm_fitting_interaction.cpp  (+147 more)
(+997 files in other folders)
