set(mjolnir_cpp_files)
add_subdirectory(core       )
add_subdirectory(input      )
add_subdirectory(interaction)
# add_subdirectory(math       )
# add_subdirectory(omp        )
add_subdirectory(potential  )
# add_subdirectory(util       )
set(mjolnir_source_files ${mjolnir_source_files} ${mjolnir_cpp_files} PARENT_SCOPE)
