set(mjolnir_forcefield_cpp_files)

add_subdirectory(3SPN2)
add_subdirectory(PDNS)
add_subdirectory(PWMcos)
add_subdirectory(FLP)
add_subdirectory(AFMFit)
add_subdirectory(MultipleBasin)
add_subdirectory(local)
add_subdirectory(global)
add_subdirectory(external)
set(mjolnir_cpp_files ${mjolnir_cpp_files} ${mjolnir_forcefield_cpp_files} PARENT_SCOPE)
